# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.664 2006/10/02 20:41:53 wolf31o2 Exp $

  22 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-chroot.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-chroot.sh, targets/netboot2/netboot2-pkg.sh,
  targets/stage4/stage4-chroot.sh, targets/tinderbox/tinderbox-chroot.sh:
  Added patch from Andrew Gaffney <agaffney@gentoo.org> to remove all
  instances of USE_ORDER since auto hasn't been valid for some time. This is
  wrt bug #155864.

  22 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py, modules/stage1_target.py:
  Added patch from Daniel Ostrow <dostrow@gentoo.org> for added FreeBSD
  goodness wrt bug #153587.

  03 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/x86-F3.msg, livecd/files/x86-F4.msg, livecd/files/x86-F5.msg:
  Changed dobladecenter to slowusb.  Thanks to solar for pointing this out.

  03 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py, modules/stage4_target.py:
  Added a check to see if we have the tarball option enabled, which causes
  catalyst to run the capture sequence. This was requested by Tim Yamin for
  the stage4 target, but I thought it should be usable on any stage target.

  03 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Moved fstab tweaks all into one location and added make.conf tweak for bug
  #144647.

  03 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Changed the options to be in alphabetical order so my meatspace logical
  parser can process them better, added the compress and tarball options,
  which are as of yet unused for bug #139390 and request from Tim Yamin, and
  removed the unused -x command line parameter for bug #151405.

  03 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>